@@ -325,20 +325,15 @@ static int action_unref(surf_action_t action)
   return 0;
 }
 
-static void action_ref(surf_action_t action)
-{
-  action->refcount++;
-}
-
 static void action_cancel(surf_action_t action)
 {
-  xbt_assert0(0, "Cannot cancel GTNetS flow");
+  xbt_die("Cannot cancel GTNetS flow");
   return;
 }
 
 static void action_recycle(surf_action_t action)
 {
-  xbt_assert0(0, "Cannot recycle GTNetS flow");
+  xbt_die("Cannot recycle GTNetS flow");
   return;
 }
 
@@ -530,7 +525,6 @@ static void surf_network_model_init_internal(void)
   surf_network_model = surf_model_init();
 
   surf_network_model->name = "network GTNetS";
-  surf_network_model->action_ref = action_ref;
   surf_network_model->action_unref = action_unref;
   surf_network_model->action_cancel = action_cancel;
   surf_network_model->action_recycle = action_recycle;
