@@ -63,11 +63,6 @@ static int parallel_action_free(surf_action_t action)
   THROW_UNIMPLEMENTED;          /* This model does not implement parallel tasks */
 }
 
-static void parallel_action_use(surf_action_t action)
-{
-  THROW_UNIMPLEMENTED;          /* This model does not implement parallel tasks */
-}
-
 static int action_unref(surf_action_t action)
 {
   if (action->model_type == surf_network_model)
@@ -79,19 +74,6 @@ static int action_unref(surf_action_t action)
   else
     DIE_IMPOSSIBLE;
   return 0;
-}
-
-static void action_ref(surf_action_t action)
-{
-  if (action->model_type == surf_network_model)
-    surf_network_model->action_ref(action);
-  else if (action->model_type == surf_cpu_model)
-    surf_cpu_model->action_ref(action);
-  else if (action->model_type == surf_workstation_model)
-    parallel_action_use(action);
-  else
-    DIE_IMPOSSIBLE;
-  return;
 }
 
 static void action_cancel(surf_action_t action)
@@ -291,7 +273,6 @@ static void surf_workstation_model_init_internal(void)
 
   surf_workstation_model->name = "Workstation";
   surf_workstation_model->action_unref = action_unref;
-  surf_workstation_model->action_ref = action_ref;
   surf_workstation_model->action_cancel = action_cancel;
   surf_workstation_model->action_state_set = ws_action_state_set;
 
