@@ -127,14 +127,6 @@ static xbt_dict_t get_properties(void *r)
   return ((cpu_L07_t) r)->properties;
 }
 
-/* action_get_state is inherited from the surf module */
-
-static void action_ref(surf_action_t action)
-{
-  action->refcount++;
-  return;
-}
-
 static int action_unref(surf_action_t action)
 {
   action->refcount--;
@@ -985,7 +977,6 @@ static void model_init_internal(void)
 {
   surf_workstation_model = surf_model_init();
 
-  surf_workstation_model->action_ref = action_ref;
   surf_workstation_model->action_unref = action_unref;
   surf_workstation_model->action_cancel = action_cancel;
   surf_workstation_model->action_state_set = surf_action_state_set;
