@@ -22,9 +22,10 @@ SimGrid (3.3.2-svn) unstable; urgency=low
     TODO: integrate the properties into that ancestor
   * Rename model methods:
     action_free -> action_unref
-    action_use  -> action_ref
     action_change_state -> action_state_set
     action_get_state    -> action_state_get
+  * Change model methods into classical functions:
+    action_use  -> surf_action_ref
     
  XBT:
   * Add xbt_set_get_by_name_or_null() [Silas De Munck]
